swap out list's getFirst/Last